Updated Memberstack Price ID

--- a/login.html
+++ b/login.html
@@ -11,10 +11,11 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500;1,700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <!-- Memberstack -->
-  <!-- Keep the same script+key you used on index.html -->
-  <script src="https://api.memberstack.io/static/memberstack.js?custom"
-          data-memberstack-id="pk_f2c8df1bd82da003cc34"></script>
+<!-- Memberstack (v2) -->
+<script
+  data-memberstack-app="app_cmfs64j5s00jl0wu4h1ee40in" 
+  src="https://static.memberstack.com/scripts/v1/memberstack.js">
+</script>
 
   <style>
     /* Page-local polish; safe with your existing CSS */
@@ -88,14 +89,14 @@
   	<!-- Monthly -->
   	<a class="btn btn-pill btn-dark btn-wide"
      	href="#"
-     	data-ms-plan="pln_monthly-membership-v4j40n2t">
+     	data-ms-price="prc_premium-monthly-plan-cklp04n5">
      	Subscribe Now | Monthly Plan for $16.99
   	</a>
 
   	<!-- Annual -->
   	<a class="btn btn-pill btn-dark btn-wide"
      	href="#"
-     	data-ms-plan="pln_annual-membership--enj60nbm">
+     	data-ms-price="prc_premium-annual--felk04yk">
      	Subscribe Now | Annual Plan for $169.99
   	</a>
 
