Add member content sneakpeak section on yoga page

--- a/login.html
+++ b/login.html
@@ -82,21 +82,21 @@
   	<!-- Free -->
   	<a class="btn btn-pill btn-dark btn-wide"
     	 href="#"
-     	data-ms-plan="pln_free-plan-pqjp04f9">
+     	data-ms-plan:add="pln_free-plan-pqjp04f9">
      	Create a FREE account
   	</a>
 
   	<!-- Monthly -->
   	<a class="btn btn-pill btn-dark btn-wide"
      	href="#"
-     	data-ms-price="prc_premium-monthly-plan-cklp04n5">
+     	data-ms-price:add="prc_premium-monthly-plan-cklp04n5">
      	Subscribe Now | Monthly Plan for $16.99
   	</a>
 
   	<!-- Annual -->
   	<a class="btn btn-pill btn-dark btn-wide"
      	href="#"
-     	data-ms-price="prc_premium-annual--felk04yk">
+     	data-ms-price:add="prc_premium-annual--felk04yk">
      	Subscribe Now | Annual Plan for $169.99
   	</a>
 
