--- a/yoga.html
+++ b/yoga.html
@@ -116,44 +116,74 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
     </article>
 </div>
 </section>
+ 
+<!--=================== Guests see this version (locked previews + CTA) ===================-->
+<section class="library" aria-label="Members library" data-ms-content="!members">
+  <div class="library-head">
+    <h2>Member Library</h2>
+    <p>Peek at what’s inside — subscribe to unlock everything.</p>
+  </div>
 
-<!-- =================== Membership Banner =================== -->
-<section class="membership" aria-label="Membership">
-  <div class="membership-media" style="background-image:url('images/membership.jpg')"></div>
-  <div class="membership-overlay"></div>
-  <div class="membership-inner container">
-    <h2>membership perks</h2>
-    <p>
-      + Full access to workout library, featuring yoga sculpt, vinyasa, ashtanga, yin & more!    
-    </p>
-    <p>
-      + New videos published every Monday. 
-    </p>
-    <p>
-      + Full access to meditation & mindfulness series. 
-    </p>
-    <p>
-      + Full access to heart-healthy and gluten free recipes & meal plans. 
-    </p>
-    <p>
-      + Read more about our <strong>Corporate Wellness Program</strong> here! 
-    </p>
-    <p>
-      <strong>Monthly pricing: $16.99 USD | Yearly pricing $169.99</strong><em>(2 Months Free!)</em>  
-    </p>
-    <a class="btn btn-pill btn-outline" href="membership.html">SUBSCRIBE NOW</a>
+  <div class="video-grid">
+    <!-- Card (locked preview) -->
+    <article class="video-card is-locked">
+      <a class="video-thumb" href="login.html">
+        <img src="images/class-hip-mobility-thumb.jpg" alt="20-min Hip Mobility">
+        <span class="lock-badge" aria-hidden="true">🔒</span>
+      </a>
+      <h3>20-min Hip Mobility</h3>
+      <p class="meta">Mobility • 20:00</p>
+    </article>
+
+   #<!-- Duplicate more cards (all hrefs point to login.html for guests) -->
+   
+  </div>
+
+  <div class="library-cta">
+    <!-- Your add-price buttons go here -->
+    <a class="btn btn-pill btn-dark"
+       href="#"
+       data-ms-price:add="prc_premium-monthly-plan-cklp04n5">Subscribe Monthly</a>
+
+    <a class="btn btn-pill btn-dark"
+       href="#"
+       data-ms-price:add="prc_premium-annual--felk04yk">Subscribe Annually</a>
+
+    <a class="btn btn-pill btn-outline"
+       href="#"
+       data-ms-plan:add="pln_free-plan-pqjp04f9">Create a Free Account</a>
   </div>
 </section>
 
-  <footer class="site-footer">
+
+<!-- Members see this version (unlocked links) -->
+<section class="library" aria-label="Members library" data-ms-content="members">
+  <div class="library-head">
+    <h2>Member Library</h2>
+    <p>Welcome back — enjoy your classes ✨</p>
+  </div>
+
+  <div class="video-grid">
+    <!-- Card (unlocked) -->
+    <article class="video-card">
+      <!-- Real destination: YouTube/Vimeo/Notion embed page/etc. -->
+      <a class="video-thumb" href="videos/hip-mobility.html">
+        <img src="images/class-hip-mobility-thumb.jpg" alt="20-min Hip Mobility">
+      </a>
+      <h3>20-min Hip Mobility</h3>
+      <p class="meta">Mobility • 20:10</p>
+    </article>
+
+    <!-- More unlocked cards -->
+    <!-- ... -->
+  </div>
+</section>
+
+<footer class="site-footer">
     <div class="container">
       <p>© <span id="y"></span> YOGA WITH LISA BY LISA ESHUN-WILSON & ASSOCIATES,LLC. / ALL RIGHTS RESERVED</p>
     </div>
   </footer>
-
-<div class="container" style="padding: 0 16px;">
-  <!-- membership section here -->
-</div>
 
 </body>
 </html>
