Add member content card updates

--- a/yoga.html
+++ b/yoga.html
@@ -49,7 +49,7 @@
   <section class="intro container">
     <h2>Find your flow here ✨</h2>
     <p>
-From energizing flows to restful resets, we’ve got you covered. Join our free in-person pop-ups, or unlock our full library of yoga and meditation with a premium subscription. Side effects may include strength, softness, and joy.
+From energizing flows to restful resets, we’ve got you covered. Join our free in-person pop-ups, or unlock our full library of yoga and meditation with a premium subscription. Side effects may include strength, flexibility, and joy.
     </p>
   </section>
 
