Uodate typos on yoga page

--- a/yoga.html
+++ b/yoga.html
@@ -174,13 +174,13 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
       </a>
     </article>
 
-    <!-- Duplicate/extend as needed -->
+  <!-- Duplicate/extend as needed -->
   </div>
 
   <!-- Inline upsell (optional) -->
   <div class="shelf-cta">
-    <a class="btn btn-pill btn-dark" href="login.html">SUBSCRIBE MONTHLY</a>
-    <a class="btn btn-pill btn-outline" href="login.html">SUBSCRIBE ANNUALLY</a>
+    <a class="btn btn-pill btn-dark" href="login.html">SUBSCRIBE FOR FULL ACCESS</a>
+
   </div>
 </section>
 
