Update new Memberstack error

--- a/login.html
+++ b/login.html
@@ -84,7 +84,7 @@
 <a class="btn btn-pill btn-dark btn-wide"
    href="#"
    data-ms-action="plan:add"
-   data-ms-plan="pln_free-plan-pqjp04f9">
+   data-ms-plan:add="pln_free-plan-pqjp04f9">
   CREATE A FREE ACCOUNT
 </a>
 
@@ -92,7 +92,7 @@
 <a class="btn btn-pill btn-dark btn-wide"
    href="#"
    data-ms-action="price:add"
-   data-ms-price="prc_premium-monthly-plan-cklp04n5">
+   data-ms-price:add="prc_premium-monthly-plan-cklp04n5">
   SUBSCRIBE NOW | MONTHLY PLAN FOR $16.99
 </a>
 
@@ -100,7 +100,7 @@
 <a class="btn btn-pill btn-dark btn-wide"
    href="#"
    data-ms-action="price:add"
-   data-ms-price="prc_premium-annual--felk04yk">
+   data-ms-price:add="prc_premium-annual--felk04yk">
   SUBSCRIBE NOW | ANNUAL PLAN FOR $169.99
 </a>
 
