--- a/login.html
+++ b/login.html
@@ -80,30 +80,23 @@
             <p class="lead">Log in to access member content, your class library, and your billing portal.</p>
 	<div class="plan-stack">
 
-<!-- Free -->
+<!-- Free (plan) -->
 <a class="btn btn-pill btn-dark btn-wide"
-   href="#"
-   data-ms-action="plan:add"
    data-ms-plan:add="pln_free-plan-pqjp04f9">
   CREATE A FREE ACCOUNT
 </a>
 
-<!-- Monthly (paid) -->
+<!-- Monthly (price) -->
 <a class="btn btn-pill btn-dark btn-wide"
-   href="#"
-   data-ms-action="price:add"
    data-ms-price:add="prc_premium-monthly-plan-cklp04n5">
   SUBSCRIBE NOW | MONTHLY PLAN FOR $16.99
 </a>
 
-<!-- Annual (paid) -->
+<!-- Annual (price) -->
 <a class="btn btn-pill btn-dark btn-wide"
-   href="#"
-   data-ms-action="price:add"
    data-ms-price:add="prc_premium-annual--felk04yk">
   SUBSCRIBE NOW | ANNUAL PLAN FOR $169.99
 </a>
-
   	<p class="plan-note">
     	Change or cancel anytime. Practice, breathe, give back—1.5% of proceeds go to permanent carbon removal thanks to
     	<a href="https://stripe.com/climate" target="_blank" rel="noopener">Stripe Climate</a>.
