Update Corporate images

--- a/corporate.html
+++ b/corporate.html
@@ -32,7 +32,7 @@
   <!-- Hero for Corporate Page -->
   <section class="hero hero--image" role="banner" aria-label="Hero">
     <!-- Set your image at images/hero.jpg -->
-    <div class="hero-media" style="background-image:url('images/corporate.jpg');" aria-hidden="true"></div>
+    <div class="hero-media" style="background-image:url('images/corporate-hero.jpg');" aria-hidden="true"></div>
     <div class="hero-overlay" aria-hidden="true"></div>
 
     <div class="hero-inner">
