Update Corporate tag line

--- a/corporate.html
+++ b/corporate.html
@@ -38,7 +38,7 @@
     <div class="hero-inner">
       <h1 class="display">
         <span class="nowrap">Movement <em>&</em> Meditation.</span><br/>
-        Holistic wellness <em>your team</em> deserves.
+        Designed <em>with your team</em> in mind.
       </h1>
         <a class="btn btn-dark btn-pill" href="#packages">VIEW PROGRAMS</a>
         <a class="btn btn-dark btn-pill" href="#contact">REQUEST A QUOTE</a>
