Add data-ms-modal=signup to your plan/price links

--- a/corporate.html
+++ b/corporate.html
@@ -50,7 +50,7 @@
   <section class="intro container">
     <h2>Client-First Service.</h2>
     <p>
-     Yoga with Lisa makes wellness simple and accessible with genuinely effective—on-demand classes, guided breathwork & meditation, as well as light strength to balance tough work or study days. Programs are flexible (morning, midday, or after-hours), inclusive for all levels, and built to help you perform at your best.
+     Yoga with Lisa makes wellness simple and accessible with genuinely effective—on-demand classes, guided breathwork & meditation, as well as light strength to balance tough work or study days. Programs are flexible (morning, midday, or after-hours), inclusive for all levels, and built to support both the mental and physical health of your high performing team.
     </p>
   </section>
 
