--- a/login.html
+++ b/login.html
@@ -82,18 +82,24 @@
 
 <!-- Free (plan) -->
 <a class="btn btn-pill btn-dark btn-wide"
+   href="#"
+   data-ms-modal="signup"
    data-ms-plan:add="pln_free-plan-pqjp04f9">
   CREATE A FREE ACCOUNT
 </a>
 
 <!-- Monthly (price) -->
 <a class="btn btn-pill btn-dark btn-wide"
+   href="#"
+   data-ms-modal="signup"
    data-ms-price:add="prc_premium-monthly-plan-cklp04n5">
   SUBSCRIBE NOW | MONTHLY PLAN FOR $16.99
 </a>
 
 <!-- Annual (price) -->
 <a class="btn btn-pill btn-dark btn-wide"
+   href="#"
+   data-ms-modal="signup"
    data-ms-price:add="prc_premium-annual--felk04yk">
   SUBSCRIBE NOW | ANNUAL PLAN FOR $169.99
 </a>
