Add data-ms-modal=signup to your plan/price links troubleshooting

--- a/login.html
+++ b/login.html
@@ -14,7 +14,8 @@
 <!-- Memberstack (v2) -->
 <script
   data-memberstack-app="app_cmfs64j5s00jl0wu4h1ee40in"
-  src="https://static.memberstack.com/scripts/v2/memberstack.js">
+  src="https://static.memberstack.com/scripts/v2/memberstack.js"
+  onload="console.log('Memberstack v2 loaded:', !!window.Memberstack)">
 </script>
 
   <style>
