Corporate hero message change

--- a/corporate.html
+++ b/corporate.html
@@ -41,7 +41,7 @@
     <div class="hero-inner">
       <h1 class="display">
         <span class="nowrap">Movement <em>&</em> Meditation.</span><br/>
-        For <em> your team</em> enterprise.
+        For <em> your</em> business.
       </h1>
         <a class="btn btn-dark btn-pill" href="#packages">VIEW PROGRAMS</a>
         <a class="btn btn-dark btn-pill" href="#contact">REQUEST A QUOTE</a>
@@ -51,7 +51,7 @@
 
   <!-- Minimal Intro -->
   <section class="intro container">
-    <h2>Designed with <em>your team</em> in minde.</h2>
+    <h2>Designed with <em>your team</em> in mind.</h2>
     <p>
      Yoga with Lisa makes wellness simple and accessible with genuinely effective—on-demand classes, guided breathwork & meditation, as well as light strength to balance tough work or study days. Programs are flexible (morning, midday, or after-hours), inclusive for all levels, and built to support both the mental and physical health of your high performing team.
     </p>
