--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   <div class="founder-inner container">
     <h2>meet the founder</h2>
     <p>
-      Dr. Lisa Eshun-Wilson receieved her PhD in Molecular and Cell Biology from UC Berkeley. Her passion for longevity and AI research inspired her journey to not only practice yoga in her free time but, ultimately, to teach and build community around this transformative practice. Her mission? Build tools and systems that motivate you to practice consistently and watch your body and mind transform for the better.
+      Dr. Lisa Eshun-Wilson receieved her PhD in Molecular and Cell Biology from UC Berkeley. Her passion for science, health, and longevity inspired her to not only <em>practice</em> yoga but also to, ultimately, <em>teach</em> and build community around this transformative practice. Her mission? Design tools and systems that motivate you to practice consistently and unlock your full potential.
     </p>
     <a class="btn btn-pill btn-outline" href="https://available-tarsal-b72.notion.site/Lisa-the-Yogi-2746b96c1321807a9f28fddbb373cf88">LISA THE YOGI</a>
   </div>
