Add Wellness and Journal and Yoga Page Updates

--- a/wellness.html
+++ b/wellness.html
@@ -34,27 +34,27 @@
 
   <!-- Hero (image) -->
   <section class="hero hero--image" role="banner" aria-label="Hero">
-    <!-- Set your image at images/yoga-hero.jpg -->
-    <div class="hero-media" style="background-image:url('images/yoga-hero.jpg');" aria-hidden="true"></div>
-    <div class="hero-overlay" aria-hidden="true"></div>
+    <!-- Set your image at images/wellness-hero.jpg -->
+    <div class="wellness-media" style="background-image:url('images/wellness-hero.jpg');" aria-hidden="true"></div>
+    <div class="wellness-overlay" aria-hidden="true"></div>
 
     <div class="hero-inner">
       <h1 class="display">
-  	<span class="nowrap">Yoga <em>every</em> way.</span><br/>
-  	Yoga <em>every</em> day.  
+  	<span class="nowrap">Wellness <em>with</em> Lisa.</span><br/>
+  	Lustre, <em>Lean, &</em> Legacy.  
       </h1>
   <div class="hero-ctas">
-        <a class="btn btn-dark btn-pill" href="login.html">START YOUR FREE TRIAL TODAY</a>
+        <a class="btn btn-dark btn-pill" href="login.html">EXPLORE TODAY</a>
       </div>
     </div>
   </section>
 
   <!-- Minimal Intro -->
   <section class="intro container">
-    <h2>Find your flow here ✨</h2>
+    <h2>Practice self-care holistically ✨</h2>
     <p>
-From energizing flows to restful resets, we’ve got you covered. Join our free in-person pop-ups, or unlock our full library of yoga and meditation with a premium subscription. Side effects may include strength, flexibility, and joy.
-    </p>
+From glowing skin to add lustre to life or nourishing meals to keep you lean to becoming financially free and building the legacy you have always dreamed of, our wellness corner is here to support the whole you. Explore self-care rituals, quick healthy recipes, and money mindset tips designed to help you shine, thrive, and invest in your future.    
+</p>
   </section>
 
 <!-- Sticky taupe nav on scroll (diagnostic version) -->
@@ -89,51 +89,51 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
   })();
 </script>
 
-<!-- =================== Lift / Lull / Level Up =================== -->
+<!-- =================== Wellness: Lustre / Lean / Legacy =================== -->
 <section class="container" style="padding: 80px 0;">
   <h2 style="text-align:center; font-family:'Playfair Display', serif; font-size:2.2rem; margin-bottom:40px;">
-    Find your perfect workout ✨
+    Wellness ✨ Lustre • Lean • Legacy
   </h2>
   <div class="grid-3" style="display:grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 32px;">
 
-    <!-- Lift -->
+    <!-- Lustre -->
     <article class="theme-card" style="text-align:center;">
-      <img src="images/lift.jpg" alt="Lift Yoga" 
-           style="width:100%; border-radius:16px; margin-bottom:16px;">
-      <h3 style="font-family:'Playfair Display', serif; margin:12px 0;">Lift</h3>
-      <p style="font-size:0.95rem; color:#444; margin-bottom:16px;">
-        Energize your body with sculpt, yogalates, HIIT, and strength-based flows 
-        designed to leave you feeling strong, focused, and ready to take on your day.
-      </p>
-      <a href="lift.html" class="btn btn-pill btn-dark">Lift, Tone, and Burn</a>
-    </article>
-
-    <!-- Lull -->
-    <article class="theme-card" style="text-align:center;">
-      <img src="images/lull.jpg" alt="Lull Yoga" 
-           style="width:100%; border-radius:16px; margin-bottom:16px;">
-      <h3 style="font-family:'Playfair Display', serif; margin:12px 0;">Lull</h3>
-      <p style="font-size:0.95rem; color:#444; margin-bottom:16px;">
-        Slow down and reset with restorative flows, yin practices, and meditations 
-        to calm your nervous system and bring peace to your mind and body.
-      </p>
-      <a href="lull.html" class="btn btn-pill btn-dark">Lull Your Nervous System</a>
-    </article>
-
-    <!-- Level Up -->
-    <article class="theme-card" style="text-align:center;">
-      <img src="images/levelup.jpg" alt="Lustre Yoga" 
+      <img src="images/lustre.jpg" alt="Lustre Wellness" 
            style="width:100%; border-radius:16px; margin-bottom:16px;">
       <h3 style="font-family:'Playfair Display', serif; margin:12px 0;">Lustre</h3>
       <p style="font-size:0.95rem; color:#444; margin-bottom:16px;">
-        Glow from the inside out with cardio-based workouts, like jump rope and kickboxing, to keep you one lean, mean, fighting machine.
+        Glow from the inside out with skincare, haircare, and self-care practices 
+        designed to bring radiance and confidence to your daily routine.
       </p>
-      <a href="lustre.html" class="btn btn-pill btn-dark">Browse Workouts to Level-Up Your Practice</a>
+      <a href="https://available-tarsal-b72.notion.site/Lustre-27d6b96c13218032b618d4b93ef4ea85" class="btn btn-pill btn-dark">Glow-Up</a>
+    </article>
+
+    <!-- Lean -->
+    <article class="theme-card" style="text-align:center;">
+      <img src="images/lean.jpg" alt="Lean Wellness" 
+           style="width:100%; border-radius:16px; margin-bottom:16px;">
+      <h3 style="font-family:'Playfair Display', serif; margin:12px 0;">Lean</h3>
+      <p style="font-size:0.95rem; color:#444; margin-bottom:16px;">
+        Nourish your body with balanced, plant-forward recipes, mindful eating tips, 
+        and nutrition strategies to fuel energy and long-term health.
+      </p>
+      <a href="https://available-tarsal-b72.notion.site/Lean-27e6b96c13218090aeacdb3db064eca7" class="btn btn-pill btn-dark">Eat Lean</a>
+    </article>
+
+    <!-- Legacy -->
+    <article class="theme-card" style="text-align:center;">
+      <img src="images/legacy.jpg" alt="Legacy Wellness" 
+           style="width:100%; border-radius:16px; margin-bottom:16px;">
+      <h3 style="font-family:'Playfair Display', serif; margin:12px 0;">Legacy</h3>
+      <p style="font-size:0.95rem; color:#444; margin-bottom:16px;">
+        Build a strong money mindset with budgeting tools, savings hacks, 
+        and investing basics to create financial freedom and security for the future.
+      </p>
+      <a href="https://available-tarsal-b72.notion.site/Legacy-27e6b96c132180788beef9b2f1f4b0b8?pvs=74" class="btn btn-pill btn-dark">Grow Your Legacy</a>
     </article>
 
   </div>
 </section>
-
 
 <!-- =================== Feature Carousel =================== -->
 <section class="cards container" aria-label="Featured links">
