--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <!-- Card 2 -->
     <article class="card">
-      <a class="card-link" href="#wellness">
+      <a class="card-link" href="wellness.html">
         <img class="card-img img-default" src="images/card-wellness-default.jpg" alt="Wellness">
         <img class="card-img img-hover"   src="images/card-wellness-hover.jpg"   alt="" aria-hidden="true">
         <div class="card-cta"><span>Wellness</span></div>
@@ -128,7 +128,7 @@
 
     <!-- Card 4 -->
     <article class="card">
-      <a class="card-link" href="#journal">
+      <a class="card-link" href="https://available-tarsal-b72.notion.site/Journal-27e6b96c13218019b5f8f864afea4ba1">
         <img class="card-img img-default" src="images/card-journal-default.jpg" alt="Travel">
         <img class="card-img img-hover"   src="images/card-journal-hover.jpg"   alt="" aria-hidden="true">
         <div class="card-cta"><span>Journal</span></div>
