Add Wellness-Hero Image and Yoga Edits

--- a/wellness.html
+++ b/wellness.html
@@ -92,24 +92,29 @@ From glowing skin to add lustre to life or nourishing meals to keep you lean to 
 <!-- =================== Wellness: Lustre / Lean / Legacy =================== -->
 <section class="container" style="padding: 80px 0;">
   <h2 style="text-align:center; font-family:'Playfair Display', serif; font-size:2.2rem; margin-bottom:40px;">
-    Wellness ✨ Lustre • Lean • Legacy
+    Lustre • Lean • Legacy
   </h2>
-  <div class="grid-3" style="display:grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 32px;">
 
+  <div class="cards-row" tabindex="0" 
+       style="display:flex; gap:24px; overflow-x:auto; scroll-snap-type:x mandatory; padding-bottom:12px;">
+    
     <!-- Lustre -->
-    <article class="theme-card" style="text-align:center;">
-      <img src="images/lustre.jpg" alt="Lustre Wellness" 
+    <article class="theme-card" 
+             style="flex:0 0 280px; scroll-snap-align:start; text-align:center;">
+      <img src="images/lustre.jpg" alt="Lustre Wellness"
            style="width:100%; border-radius:16px; margin-bottom:16px;">
       <h3 style="font-family:'Playfair Display', serif; margin:12px 0;">Lustre</h3>
       <p style="font-size:0.95rem; color:#444; margin-bottom:16px;">
         Glow from the inside out with skincare, haircare, and self-care practices 
         designed to bring radiance and confidence to your daily routine.
       </p>
-      <a href="https://available-tarsal-b72.notion.site/Lustre-27d6b96c13218032b618d4b93ef4ea85" class="btn btn-pill btn-dark">Glow-Up</a>
+      <a href="https://available-tarsal-b72.notion.site/Lustre-27d6b96c13218032b618d4b93ef4ea85" 
+         class="btn btn-pill btn-dark">Glow-Up</a>
     </article>
 
     <!-- Lean -->
-    <article class="theme-card" style="text-align:center;">
+    <article class="theme-card" 
+             style="flex:0 0 280px; scroll-snap-align:start; text-align:center;">
       <img src="images/lean.jpg" alt="Lean Wellness" 
            style="width:100%; border-radius:16px; margin-bottom:16px;">
       <h3 style="font-family:'Playfair Display', serif; margin:12px 0;">Lean</h3>
@@ -117,22 +122,62 @@ From glowing skin to add lustre to life or nourishing meals to keep you lean to 
         Nourish your body with balanced, plant-forward recipes, mindful eating tips, 
         and nutrition strategies to fuel energy and long-term health.
       </p>
-      <a href="https://available-tarsal-b72.notion.site/Lean-27e6b96c13218090aeacdb3db064eca7" class="btn btn-pill btn-dark">Eat Lean</a>
+      <a href="https://available-tarsal-b72.notion.site/Lean-27e6b96c13218090aeacdb3db064eca7" 
+         class="btn btn-pill btn-dark">Eat Lean</a>
     </article>
 
     <!-- Legacy -->
-    <article class="theme-card" style="text-align:center;">
-      <img src="images/legacy.jpg" alt="Legacy Wellness" 
+    <article class="theme-card" 
+             style="flex:0 0 280px; scroll-snap-align:start; text-align:center;">
+      <img src="images/legacy.jpg" alt="Legacy Wellness"
            style="width:100%; border-radius:16px; margin-bottom:16px;">
       <h3 style="font-family:'Playfair Display', serif; margin:12px 0;">Legacy</h3>
       <p style="font-size:0.95rem; color:#444; margin-bottom:16px;">
-        Build a strong money mindset with budgeting tools, savings hacks, 
+        Build a strong money mindset with budgeting tools, savings hacks,
         and investing basics to create financial freedom and security for the future.
       </p>
-      <a href="https://available-tarsal-b72.notion.site/Legacy-27e6b96c132180788beef9b2f1f4b0b8?pvs=74" class="btn btn-pill btn-dark">Grow Your Legacy</a>
+      <a href="https://available-tarsal-b72.notion.site/Legacy-27e6b96c132180788beef9b2f1f4b0b8?pvs=74" 
+         class="btn btn-pill btn-dark">Grow Your Legacy</a>
     </article>
 
   </div>
+</section>
+
+
+<!-- =================== Feature Carousel =================== -->
+<section class="cards container" aria-label="Featured links">
+  <h2 class="visually-hidden">Explore</h2>
+<div class="in-person-classes-head">
+    <h2>Join us for our in-person yoga pop-up classes! Virtual links are available.</h2>
+    <p class="sub">Each pop-up class is a chance to recharge, sweat, and share space with a supportive community. Show up as you are—every practice is beginner-friendly and a ton of fun!</p>
+  </div>
+
+  <div class="cards-row" tabindex="0">
+
+    <!-- Card 1 -->
+    <article class="card">
+      <a class="card-link" href="https://partiful.com/e/TCEOyAKeVyFvav9ayY30?">
+        <img class="card-img img-default" src="images/oct18-greenyogi-flyer-default.jpg" alt="Pop Up">
+        <img class="card-img img-hover"   src="images/oct18-greenyogi-flyer-hover.jpg"   alt="" aria-hidden="true">
+      </a>
+    </article>
+
+    <!-- Card 2 -->
+    <article class="card">
+      <a class="card-link" href="https://partiful.com/e/KKvYNm7SQLW4SXslqEhJ">
+        <img class="card-img img-default" src="images/sept19-greenyogi-flyer-default.jpg" alt="Pop Up">
+        <img class="card-img img-hover"   src="images/sept19-greenyogi-flyer-hover.jpg"   alt="" aria-hidden="true">
+      </a>
+    </article>
+
+    <!-- Card 3 -->
+    <article class="card">
+      <a class="card-link" href="https://partiful.com/e/TCEOyAKeVyFvav9ayY30?">
+        <img class="card-img img-default" src="images/aug19-greenyogi-flyer-default.jpg" alt="Pop Up">
+        <img class="card-img img-hover"   src="images/aug19-greenyogi-flyer-hover.jpg"   alt="" aria-hidden="true">
+      </a>
+    </article>
+</div>
 </section>
 
 </body>
