--- a/yoga.html
+++ b/yoga.html
@@ -139,8 +139,9 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
 <section class="cards container" aria-label="Featured links">
   <h2 class="visually-hidden">Explore</h2>
 <div class="in-person-classes-head">
-    <h2>Join us for our Pop-Up Classes!</h2>
-    <p class="sub">We offer in-person yoga classes for all levels. We would love to see you there!</p>
+    <h2>Meet me on the mat!</h2>
+    <p class="sub">From sunny vinyasa flows to grounding yin resets, our in-person pop-ups are designed to lift your body and your mood. Bring a friend, find your flow, and leave glowing.  
+</p>
   </div>
 
   <div class="cards-row" tabindex="0">
