--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <section class="intro container">
     <h2>Let's flow.</h2>
     <p>
-    Hi I'm Lisa! A certified yoga teacher from Los Angeles, CA. Yoga with Lisa is an wellness platform that features personalized yoga classes, meditations, and nutrition all in one place — adapting to your body, your cycle, and your lifestyle in real time.  
+    Hi I'm Lisa! A certified yoga teacher from Los Angeles, CA. Yoga with Lisa is a digital wellness platform that features personalized yoga classes, meditations, and nutrition all in one place — adapting to your body, your cycle, and your lifestyle in real time.  
     </p>
   </section>
 
